--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-dotenv": "^3.2.0",
     "react-native-elements": "^3.4.2",
+    "react-native-inappbrowser-reborn": "^3.6.3",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-simple-store": "^2.0.2",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.5"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
